--- a/app/src/main/res/layout/item_mai_fd_dd_dsh.xml
+++ b/app/src/main/res/layout/item_mai_fd_dd_dsh.xml
@@ -177,8 +177,7 @@
                 android:layout_width="80dp"
                 android:layout_height="60dp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:background="@mipmap/ic_launcher"/>
+                android:layout_marginLeft="20dp"/>
 
             <ImageView
                 android:id="@+id/mai_fd_dd_dsh_iv_2"
@@ -186,8 +185,7 @@
                 android:layout_height="60dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/mai_fd_dd_dsh_iv_1"
-                android:background="@mipmap/ic_launcher"/>
+                android:layout_toRightOf="@id/mai_fd_dd_dsh_iv_1"/>
 
         </RelativeLayout>
 
