--- a/app/src/main/res/layout/item_mai_fd_dd_qbrw.xml
+++ b/app/src/main/res/layout/item_mai_fd_dd_qbrw.xml
@@ -5,6 +5,7 @@
               android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/item_mai_fd_dd_qbrw_ll"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="#ffffff"
@@ -42,17 +43,6 @@
                     android:textSize="12sp"/>
             </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="15dp"
-                android:text="已完成"
-                android:textColor="#FFA500"
-                android:textSize="12sp">
-
-            </TextView>
 
             <View
                 android:layout_width="match_parent"
@@ -67,14 +57,13 @@
             android:layout_width="match_parent"
             android:layout_height="90dp">
 
-            <ImageView
+            <efan.com.money.UIView.RoundImageView
                 android:id="@+id/mai_fd_dd_qbrw_item_tupian"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:background="@mipmap/ic_launcher"/>
+                android:layout_marginLeft="20dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -122,7 +111,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:text="发单人："
+                        android:text="接单人："
                         android:textColor="#cccccc"
                         android:textSize="13sp"/>
 
