--- a/app/src/main/res/layout/item_mai_jd_dd_jyz.xml
+++ b/app/src/main/res/layout/item_mai_jd_dd_jyz.xml
@@ -68,14 +68,13 @@
             android:layout_width="match_parent"
             android:layout_height="90dp">
 
-            <ImageView
+            <efan.com.money.UIView.RoundImageView
                 android:id="@+id/mai_1_dd_jyz_item_tupian"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:background="@mipmap/ic_launcher"/>
+                android:layout_marginLeft="20dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
