--- a/app/src/main/res/layout/mai_1_fragment.xml
+++ b/app/src/main/res/layout/mai_1_fragment.xml
@@ -124,6 +124,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/mai_1_fra_srzd"
         android:layout_width="match_parent"
         android:layout_height="50dp">
 
