--- a/app/src/main/res/layout/mai_2_dd_jxs.xml
+++ b/app/src/main/res/layout/mai_2_dd_jxs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <com.github.nuptboyzhb.lib.SuperSwipeRefreshLayout
         android:id="@+id/mai_fd_dd_jxs_refresh"
@@ -15,4 +15,29 @@
 
 
     </com.github.nuptboyzhb.lib.SuperSwipeRefreshLayout>
-</LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/mai_fd_dd_jxs_rl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="155dp"
+            android:layout_height="89dp"
+            android:layout_centerInParent="true"
+            android:background="@mipmap/wushuju"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="没有相关订单"
+            android:textColor="#bfbfbf"
+            android:textSize="18sp"/>
+    </RelativeLayout>
+</RelativeLayout>
