--- a/app/src/main/res/layout/jd_main.xml
+++ b/app/src/main/res/layout/jd_main.xml
@@ -37,6 +37,7 @@
         android:orientation="horizontal">
 
         <RelativeLayout
+            android:id="@+id/jd_main_tuiguang_rl"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -59,6 +60,7 @@
         </View>
 
         <RelativeLayout
+            android:id="@+id/jd_main_zhanghao_rl"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -102,6 +104,31 @@
 
     </View>
 
+    <RelativeLayout
+        android:id="@+id/jd_main_wusuju_rl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="155dp"
+            android:layout_height="89dp"
+            android:layout_centerInParent="true"
+            android:background="@mipmap/wushuju"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="没有符合类型的单子"
+            android:textColor="#bfbfbf"
+            android:textSize="18sp"/>
+    </RelativeLayout>
+
     <com.github.nuptboyzhb.lib.SuperSwipeRefreshLayout
         android:id="@+id/jd_main_swipe_refresh"
         android:layout_width="match_parent"
@@ -110,11 +137,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v7.widget.RecyclerView>
-
-
+            android:layout_height="match_parent"/>
     </com.github.nuptboyzhb.lib.SuperSwipeRefreshLayout>
 
 
