--- a/app/src/main/res/layout/mefragment.xml
+++ b/app/src/main/res/layout/mefragment.xml
@@ -33,7 +33,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20dp"
                     android:layout_toRightOf="@id/main_head"
-                    android:text="扯淡"
+                    android:text=""
                     android:textColor="#ffffff"
                     android:textSize="16sp"/>
 
