--- a/app/src/main/res/layout/other_collect.xml
+++ b/app/src/main/res/layout/other_collect.xml
@@ -34,4 +34,29 @@
         android:divider="#f5f5f5">
     </ListView>
 
+    <RelativeLayout
+        android:id="@+id/other_collect_rl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="155dp"
+            android:layout_height="89dp"
+            android:layout_centerInParent="true"
+            android:background="@mipmap/wushuju"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="没有收藏"
+            android:textColor="#bfbfbf"
+            android:textSize="18sp"/>
+    </RelativeLayout>
+
 </LinearLayout>
