--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="white">#ffffff</color>
     <color name="green">#00CD00</color>
     <color name="orange">#FFA500</color>
+    <color name="gray">#dbdbdb</color>
+    <color name="black">#000000</color>
 </resources>
