--- a/app/src/main/res/layout/jd_indent.xml
+++ b/app/src/main/res/layout/jd_indent.xml
@@ -115,7 +115,7 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="30dp"
-                        android:text="未完成"
+                        android:text=""
                         android:textColor="#cccccc"
                         android:textSize="16sp"/>
 
