--- a/app/src/main/res/layout/other_setting.xml
+++ b/app/src/main/res/layout/other_setting.xml
@@ -11,7 +11,7 @@
         android:background="#ffffff">
 
         <ImageView
-            android:id="@+id/fb_lx_fanhui"
+            android:id="@+id/other_setting_fanhui"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_centerVertical="true"
@@ -30,6 +30,35 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:background="#f5f5f5">
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#ffffff">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:text="推送"
+            android:textSize="16sp"/>
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/other_setting_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="20dp"
+            android:background="#dbdbdb"/>
     </RelativeLayout>
 
     <RelativeLayout
